--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>Formula 1 Driver API</h1>
-    <p>https://formulaone-first-api.herokuapp.com/api/(driver name)</p>
+    <p>Please use https://formulaone-first-api.herokuapp.com/api/(driver name)</p>
     
 </body>
 </html>
